Bugfix - Time difference
